--- a/mainpage.html
+++ b/mainpage.html
@@ -15,47 +15,49 @@
       <a class="navbar-brand" href="#">Rapidamente.io</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="task.html">Table</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li class="active"><a href="#">Create Task</a></li>
+      <li><a href="task.html">Task</a></li>
+      <li><a href="#">Biliing/Shipping</a></li>
+      <li><a href="#">Settings</a></li>
     </ul>
   </div>
 </nav>
 
 <div class="container">
 </div>
-  <form class="form-inline">
+  <form class="form-horizontial">
   <div class="form-group">
     <label for="url">URL</label>
-    <input type="email" class="form-control" id="email">
+    <input type="url" class="form-control" id="url">
+
   </div>
+  <br />
   <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
+    <label for="pwd">Checkout Delay</label>
+    <input type="textContent" class="form-control" id="pwd">
+  </div>
+  <br />
+  <div class="form-group">
+    <label for="sel1">Shoe Size:</label>
+    <select class="form-control" id="sel1">
+      <option>38</option>
+      <option>39</option>
+      <option>40</option>
+      <option>41</option>
+      <option>42</option>
+      <option>43</option>
+      <option>44</option>
+      <option>45</option>
+      <option>46</option>
+      <option>47</option>
+      <option>48</option>
+    </select>
+  </div>
   </div>
   <div class="checkbox">
     <label><input type="checkbox">Captcha</label>
   </div>
-</div>
-  </form>
-<div class="form-group">
-  <label for="sel1">Shoe Size:</label>
-  <select class="form-control" id="sel1">
-    <option>38</option>
-    <option>39</option>
-    <option>40</option>
-    <option>41</option>
-    <option>42</option>
-    <option>43</option>
-    <option>44</option>
-    <option>45</option>
-    <option>46</option>
-    <option>47</option>
-    <option>48</option>
-  </select>
-</div>
-</div>
+  
 <a href="#task.html"><button type="submit" class="btn btn-danger">Shipping/Billing</button></a>
 
 
