--- a/mainpage.html
+++ b/mainpage.html
@@ -16,7 +16,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Create Task</a></li>
-      <li><a href="task.html">Task</a></li>
+      <li><a href="task2.html">Task</a></li>
       <li><a href="#">Biliing/Shipping</a></li>
       <li><a href="#">Settings</a></li>
     </ul>
@@ -26,18 +26,16 @@
 <div class="container">
 </div>
   <form class="form-horizontial">
-  <div class="form-group">
+  <div class="col-xs-3">
     <label for="url">URL</label>
     <input type="url" class="form-control" id="url">
 
   </div>
-  <br />
-  <div class="form-group">
+  <div class="col-xs-3">
     <label for="pwd">Checkout Delay</label>
     <input type="textContent" class="form-control" id="pwd">
   </div>
-  <br />
-  <div class="form-group">
+  <div class="col-xs-3">
     <label for="sel1">Shoe Size:</label>
     <select class="form-control" id="sel1">
       <option>38</option>
@@ -57,8 +55,9 @@
   <div class="checkbox">
     <label><input type="checkbox">Captcha</label>
   </div>
-  
-<a href="#task.html"><button type="submit" class="btn btn-danger">Shipping/Billing</button></a>
+  <br />
+
+<a href="task.html"><button type="submit" class="btn btn-danger">Shipping/Billing</button></a>
 
 
   </body>
@@ -77,6 +76,11 @@
   }
 
   }
+  div [type=t]  {
+  background-color: #ab4f4f
+
+
+}
 
 
 
